--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-  
     <!-- Button for clicking -->
     <input type="text" id="input" size=40>
     <button id="findButton">Find Anagrams</button>
+    <div id="result">Result: </div>
 
     <!-- JS link -->
     <script type="text/javascript" src="words.js"></script>
